--- a/angular.json
+++ b/angular.json
@@ -1,129 +1,6 @@
 {
   "version": 1,
   "projects": {
-    "operators1": {
-      "projectType": "application",
-      "schematics": {
-        "@nrwl/angular:component": {
-          "style": "scss"
-        }
-      },
-      "root": "apps/operators1",
-      "sourceRoot": "apps/operators1/src",
-      "prefix": "operators",
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-angular:browser",
-          "options": {
-            "outputPath": "dist/apps/operators1",
-            "index": "apps/operators1/src/index.html",
-            "main": "apps/operators1/src/main.ts",
-            "polyfills": "apps/operators1/src/polyfills.ts",
-            "tsConfig": "apps/operators1/tsconfig.app.json",
-            "aot": true,
-            "assets": [
-              "apps/operators1/src/favicon.ico",
-              "apps/operators1/src/assets"
-            ],
-            "styles": ["apps/operators1/src/styles.scss"],
-            "scripts": []
-          },
-          "configurations": {
-            "production": {
-              "fileReplacements": [
-                {
-                  "replace": "apps/operators1/src/environments/environment.ts",
-                  "with": "apps/operators1/src/environments/environment.prod.ts"
-                }
-              ],
-              "optimization": true,
-              "outputHashing": "all",
-              "sourceMap": false,
-              "extractCss": true,
-              "namedChunks": false,
-              "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true,
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "2mb",
-                  "maximumError": "5mb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "6kb",
-                  "maximumError": "10kb"
-                }
-              ]
-            }
-          }
-        },
-        "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
-          "options": {
-            "browserTarget": "operators1:build"
-          },
-          "configurations": {
-            "production": {
-              "browserTarget": "operators1:build:production"
-            }
-          }
-        },
-        "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
-          "options": {
-            "browserTarget": "operators1:build"
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "apps/operators1/tsconfig.app.json",
-              "apps/operators1/tsconfig.spec.json"
-            ],
-            "exclude": ["**/node_modules/**", "!apps/operators1/**"]
-          }
-        },
-        "test": {
-          "builder": "@nrwl/jest:jest",
-          "options": {
-            "jestConfig": "apps/operators1/jest.config.js",
-            "tsConfig": "apps/operators1/tsconfig.spec.json",
-            "passWithNoTests": true,
-            "setupFile": "apps/operators1/src/test-setup.ts"
-          }
-        }
-      }
-    },
-    "operators1-e2e": {
-      "root": "apps/operators1-e2e",
-      "sourceRoot": "apps/operators1-e2e/src",
-      "projectType": "application",
-      "architect": {
-        "e2e": {
-          "builder": "@nrwl/cypress:cypress",
-          "options": {
-            "cypressConfig": "apps/operators1-e2e/cypress.json",
-            "tsConfig": "apps/operators1-e2e/tsconfig.e2e.json",
-            "devServerTarget": "operators1:serve"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "operators1:serve:production"
-            }
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": ["apps/operators1-e2e/tsconfig.e2e.json"],
-            "exclude": ["**/node_modules/**", "!apps/operators1-e2e/**"]
-          }
-        }
-      }
-    },
     "scan": {
       "projectType": "library",
       "root": "libs/scan",
@@ -338,6 +215,129 @@
           }
         }
       }
+    },
+    "operators": {
+      "projectType": "application",
+      "schematics": {
+        "@nrwl/angular:component": {
+          "style": "scss"
+        }
+      },
+      "root": "apps/operators",
+      "sourceRoot": "apps/operators/src",
+      "prefix": "operators",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/apps/operators",
+            "index": "apps/operators/src/index.html",
+            "main": "apps/operators/src/main.ts",
+            "polyfills": "apps/operators/src/polyfills.ts",
+            "tsConfig": "apps/operators/tsconfig.app.json",
+            "aot": true,
+            "assets": [
+              "apps/operators/src/favicon.ico",
+              "apps/operators/src/assets"
+            ],
+            "styles": ["apps/operators/src/styles.scss"],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "apps/operators/src/environments/environment.ts",
+                  "with": "apps/operators/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "operators:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "operators:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "operators:build"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "apps/operators/tsconfig.app.json",
+              "apps/operators/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**", "!apps/operators/**"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "apps/operators/jest.config.js",
+            "tsConfig": "apps/operators/tsconfig.spec.json",
+            "passWithNoTests": true,
+            "setupFile": "apps/operators/src/test-setup.ts"
+          }
+        }
+      }
+    },
+    "operators-e2e": {
+      "root": "apps/operators-e2e",
+      "sourceRoot": "apps/operators-e2e/src",
+      "projectType": "application",
+      "architect": {
+        "e2e": {
+          "builder": "@nrwl/cypress:cypress",
+          "options": {
+            "cypressConfig": "apps/operators-e2e/cypress.json",
+            "tsConfig": "apps/operators-e2e/tsconfig.e2e.json",
+            "devServerTarget": "operators:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "operators:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": ["apps/operators-e2e/tsconfig.e2e.json"],
+            "exclude": ["**/node_modules/**", "!apps/operators-e2e/**"]
+          }
+        }
+      }
     }
   },
   "cli": {
@@ -353,5 +353,5 @@
       "unitTestRunner": "jest"
     }
   },
-  "defaultProject": "operators1"
+  "defaultProject": "operators"
 }
